syntax ="proto3";

service RestaurantService {
    rpc GetAllMenu(Empty) returns (MenuList) {}
    rpc Get (MenuId) returns (MenuItem){}
    rpc Insert (MenuItem) returns (MenuItem) {}
    rpc Update (MenuItem) returns (MenuItem) {}
    rpc Remove (MenuId) returns (Empty) {}
}

message Empty{}

message MenuItem {
    string id =1;
    string type =2;
    string name=3;
    int32 price=4;
}

message MenuList{
    repeated MenuItem menu=1;
}

message MenuId{
    string id=1;
}